2016-04-11 Christophe Ramananjaona <isloux AT yahoo.co.ukL>
 * Added ChangeLog
 * Added YashooFinanceSqlite.py